# airmb-rag-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: README  env.py  script.py.mako
app/: __init__.py  main.py
app/api/: router.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  faqs.py  health.py  search.py  vector.py
app/core/: __init__.py  config.py  database.py  exceptions.py  vector_db.py
app/models/: __init__.py  base.py  faq.py
app/repositories/: faq.py
app/schemas/: __init__.py  common.py  embedding.py  faq.py  faq_import.py
app/services/: __init__.py  embedding.py  embedding_task.py  faq.py  faq_embedding.py  faq_import.py  vector_store.py
app/workers/: __init__.py
tests/: test_cors.py  test_database_error.py  test_embedding_api.py  test_faq_api.py  test_faq_import.py  test_faq_repository.py  test_faq_service.py  test_health.py  test_vector_api.py
