[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "airmb-rag-backend"
version = "0.1.0"
description = "爱藏知识库管理后台后端服务"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "aiomysql>=0.2,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic-settings>=2.7,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "httpx>=0.28,<1.0",
    "redis>=5.2,<8.0",
    "celery>=5.4,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=0.25,<2.0",
    "ruff>=0.9,<1.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
